# assigment_1

./: .gitignore  main.py  pyproject.toml
assigment_1/: read_json.py
tests/: test_assigment_1.py
