[tool.poetry]
name = "assigment_1"
version = "0.1.0"
description = ""
authors = ["Bùi Khánh Huyền <buikhanhhuyena4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.4.3"
fsspec = "^2022.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
